WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
11632
REGRESSION (
r17770
): Overflow areas' scrollbars don't work
https://bugs.webkit.org/show_bug.cgi?id=11632
Summary
REGRESSION (r17770): Overflow areas' scrollbars don't work
mitz
Reported
2006-11-17 08:44:11 PST
Scrollbars on overflow areas (including list boxes and text areas) don't receive mouse events.
Attachments
Add attachment
proposed patch, testcase, etc.
Matt Lilek
Comment 1
2006-11-17 08:54:57 PST
***
Bug 11629
has been marked as a duplicate of this bug. ***
mitz
Comment 2
2006-11-17 09:03:40 PST
Oops, I should have augmented the earlier bug report, but I didn't make the connection between "arrows" and scrollbars (I thought it was about the arrow keys). Sorry, Daniele.
Daniele Metilli
Comment 3
2006-11-17 09:11:27 PST
(In reply to
comment #2
)
> Oops, I should have augmented the earlier bug report, but I didn't make the > connection between "arrows" and scrollbars (I thought it was about the arrow > keys). Sorry, Daniele. >
No problem :)
Matt Lilek
Comment 4
2006-11-24 10:46:23 PST
***
Bug 11687
has been marked as a duplicate of this bug. ***
Chris Petersen
Comment 5
2006-11-29 10:55:49 PST
I have been running into this issue as well. I filed a crash that is related to dragging in a list box that started with
r17770
.
http://bugs.webkit.org/show_bug.cgi?id=11713
mitz
Comment 6
2006-11-30 08:47:52 PST
***
Bug 11612
has been marked as a duplicate of this bug. ***
Darin Adler
Comment 7
2006-12-04 13:40:30 PST
<
rdar://problem/4858866
> REGRESSION (
r17770
): Overflow areas' scrollbars don't work
Darin Adler
Comment 8
2006-12-04 13:41:43 PST
Committed revision 18001.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug