        Reviewed by Beth.

- fix http://bugs.webkit.org/show_bug.cgi?id=11632
          AKA <rdar://problem/4858866> REGRESSION (r17770): Overflow areas' scrollbars don't work

        No test case added at the moment, but Beth said she'd investigate
        adding one after the fact.

        * page/mac/EventHandlerMac.mm:
        (WebCore::EventHandler::passMousePressEventToScrollbar):
        Fix obvious-in-retrospect copy and paste error -- call
        passMouseDownEventToWidget instead of passWheelEventToWidget.



Canonical link: https://commits.webkit.org/15106@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@18001 268f45cc-cd09-0410-ab3c-d52691b4dbfc